--- a/main.css
+++ b/main.css
@@ -1,62 +1,127 @@
-body{
-    background-image: url(s.jpg) ;
+body {
+    background-image: url(backk.jpg);
     background-size: cover;
-   
+    position: fixed;
 }
 
-
-.one
-{
-   border-radius: 150%;
-   margin-left: 560px;
-   margin-top: 100px;
-   width: 24%;
+a {
+    text-decoration: none;
 }
-.two
-{
+
+#one {
+    border-radius: 250%;
+    margin-left: 150px;
+    margin-top: 100px;
+    width: 51%;
+}
+
+#three {
     font-style: oblique;
     font-family: monospace;
-    margin-top: 50px;
     font-size: 15px;
-    text-align: center;
+    margin-left: 70px;
+    padding: 10px;
+    color: brown;
+}
+
+#two {
+    font-size: 50px;
     display: block;
+    margin-left: 140px;
+}
+
+.four {
+    margin-left: 130px;
+    padding: 10px;
+    width: 50px;
+    margin-top: 20px;
+}
+
+.five {
+    width: 50px;
+    display: inline;
+    padding: 10px;
+    margin-top: 20px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+#footer {
+    font-size: 15px;
+    font-weight: bold;
+    color: skyblue;
+    margin-left: 200px;
+    margin-top: 50px;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.9);
+}
+
+.modal-content {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 250px;
+}
+
+#caption {
+    font-size: 30px;
+    margin: auto;
+    display: block;
+    text-align: center;
+    color: #ccc;
+    padding: 10px;
+}
+
+@-webkit-keyframes zoom {
+    from {
+        -webkit-transform: scale(0)
+    }
+    to {
+        -webkit-transform: scale(1)
+    }
+}
+
+@keyframes zoom {
+    from {
+        transform: scale(0)
+    }
+    to {
+        transform: scale(1)
+    }
+}
+
+.close {
     position: absolute;
-    margin-left: 480px;
-    padding: 45px;
-    color:gray;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+}
 
+.close:hover,
+.close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
 }
-.three
-{
-    font-size: 60px;
-    text-align: center;
-    display: block;
-    margin-left: 25px;
-    color: wheat;
-   
-    
 
-}
-.four
-{
-    margin-left: 630px;
-    padding: 10px;
-    width: 40px;
-
-}
-.five
-{
-    width: 42px;
-    padding: 10px;
-
-}
-.six
-{
-    width: 45px;
-    padding: 10px;
-}
-.seven 
-{
-    width: 42px;
-    padding: 10px;
+#inside {
+    width: 350px;
+    max-width: 300px;
+    margin-top: 100px;
+    margin-left: 600px;
 }
