--- a/main.css
+++ b/main.css
@@ -1,7 +1,8 @@
 body {
-    background-image: url(backk.jpg);
+    background-image: url(download.jpg);
     background-size: cover;
     position: fixed;
+    margin-left: 400px;
 }
 
 a {
@@ -34,14 +35,14 @@ a {
     margin-left: 130px;
     padding: 10px;
     width: 50px;
-    margin-top: 20px;
+    margin-top: 5px;
 }
 
 .five {
     width: 50px;
     display: inline;
     padding: 10px;
-    margin-top: 20px;
+    margin-top: 5px;
     cursor: pointer;
     transition: 0.3s;
 }
@@ -49,9 +50,9 @@ a {
 #footer {
     font-size: 15px;
     font-weight: bold;
-    color: skyblue;
-    margin-left: 200px;
-    margin-top: 50px;
+    color: white;
+    margin-left: 220px;
+    margin-top: 20px;
 }
 
 .modal {
@@ -84,24 +85,6 @@ a {
     padding: 10px;
 }
 
-@-webkit-keyframes zoom {
-    from {
-        -webkit-transform: scale(0)
-    }
-    to {
-        -webkit-transform: scale(1)
-    }
-}
-
-@keyframes zoom {
-    from {
-        transform: scale(0)
-    }
-    to {
-        transform: scale(1)
-    }
-}
-
 .close {
     position: absolute;
     top: 15px;
@@ -124,4 +107,10 @@ a {
     max-width: 300px;
     margin-top: 100px;
     margin-left: 600px;
+}
+
+#audio {
+    display: block;
+    margin-left: 150px;
+    margin-top: 5px;
 }
